# graph-fraud

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
config/: feature_config.yaml  inference_config.yaml  training_config.yaml
config/grafana/: fraud_detection_dashboard.json
config/prometheus/: prometheus.yml
models/: fraud_detector.json
notebooks/: 01_data_quality_check.py  02_graph_statistics.py  03_fraud_pattern_exploration.py  04_feature_correlation.py
prometheus/: prometheus.yml
src/data/: generate_fraud_data.py  load_neo4j.cypher  load_to_neo4j.py
src/features/: graph_features.py
src/models/: inference.py  train.py
src/queries/: fraud_exploration.cypher  verify_graph.py
