[project]
name = "graph-fraud"
version = "0.1.0"
description = "Graph-based fraud detection using Neo4j and machine learning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Anticiparte", email = ""}
]
dependencies = [
    "dvc>=3.64.1",
    "marimo>=0.18.1",
    "mlflow>=3.6.0",
    "neo4j>=6.0.3",
    "networkx>=3.6",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
